@@ -5,13 +5,8 @@ var SwitchGuide = 0;
 var VideoHDMIOut = HDMI[4];
 var VideoScartOut = Scart[1];
 var TimeShift = 0; // 0 = no, 1 = yes timeshift
+var ShowSubs = 1; // 0 no, 1 = yes (default)
 
-//  720x576
-// 1280x720
-// 1920x1080
-
-var Xfactor = 720 / 720;
-var Yfactor = 576 / 576;
 
 months = new Array('January', 'February', 'March', 'April', 'May', 'June', 'Jully', 'August', 'September', 'October', 'November', 'December');
 days = new Array('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday');
